--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -11,18 +11,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>My Bicycle Shop</title>
+    <title>Bob's Cars and Parts</title>
 </head>
 <body>
 
 <div class="container">
-    <h1>Shop</h1>
+    <h1>Bob's Cars and Parts</h1>
     <hr>
     <h2>Parts</h2>
     <form th:action="@{/mainscreen}">
-        Filter: <input type="text" name="partkeyword" id="partkeyword" size="50" th:value="${partkeyword}" required />
+        Filter: <input type="text" list="part_list" name="partkeyword" id="partkeyword" size="50" th:value="${partkeyword}" required />
         &nbsp;
         <input type="submit" value="Search" />
+        <datalist id="part_list">
+            <option value="Ferrari Hood">
+            <option value="Aston Martin Muffler">
+            <option value="Mustang Spoiler">
+            <option value="Corvette Steering Wheel">
+            <option value="Rolls Royce Hood Ornament">
+        </datalist>
         &nbsp;
         <input type="button" value="Clear" id="btnClearPart" onclick="clearSearch()" />
     </form>
@@ -50,10 +57,16 @@
         </tr>
         </tbody>
     </table>
-    <h2>Products</h2>
+    <h2>Cars for Sale</h2>
     <form th:action="@{/mainscreen}">
-        Filter: <input type="text" name="productkeyword" id="productkeyword" size="50" th:value="${productkeyword}" required />
-        &nbsp;
+        Filter: <input type="text" list="car_list" name="productkeyword" id="productkeyword" size="50" th:value="${productkeyword}" required />
+        &nbsp;<datalist id="car_list">
+        <option value="Rolls Royce">
+        <option value="Ferrari">
+        <option value="Aston Martin">
+        <option value="Corvette">
+        <option value="Mustang">
+    </datalist>
         <input type="submit" value="Search" />
         &nbsp;
         <input type="button" value="Clear" id="btnClearProduct" onclick="clearSearch()" />
