Requirement D: Added about page and navigational links to both.

--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -12,11 +12,13 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>Bob's Cars and Parts</title>
+
 </head>
 <body>
 
 <div class="container">
     <h1>Bob's Cars and Parts</h1>
+    <a href="/about.html">About Us</a>
     <hr>
     <h2>Parts</h2>
     <form th:action="@{/mainscreen}">
