--- a/src/main/resources/templates/confirmationbuypart.html
+++ b/src/main/resources/templates/confirmationbuypart.html
@@ -5,6 +5,6 @@
     <titl>You bought the part</titl></title>
 </head>
 <body>
-<h1>You bought the part!</h1>
+<h1>You bought the product!</h1>
 </body>
 </html>
