--- a/src/main/resources/templates/failbuypart.html
+++ b/src/main/resources/templates/failbuypart.html
@@ -5,6 +5,6 @@
     <title>Sold Out</title>
 </head>
 <body>
-<h1>We're sold out of that part. You can't buy it right now.</h1>
+<h1>We're sold out of that product. You can't buy it right now.</h1>
 </body>
 </html>
