--- a/src/main/resources/templates/InhousePartForm.html
+++ b/src/main/resources/templates/InhousePartForm.html
@@ -23,6 +23,9 @@
 
     <p><input type="text" th:field="*{partId}" placeholder="Part ID" class="form-control mb-4 col-4"/></p>
 
+  <!-- <p><input type="text" path="min" th:field="*{min}" placeholder="Minimum" class="form-control mb-4 col-4"/></p>
+    <p><input type="text" path="max" th:field="*{max}" placeholder="Maximum" class="form-control mb-4 col-4"/></p>
+-->
 <p><input type="submit" value="Submit" /></p>
 </form>
 <p><errors path="price" cssClass=""error/><p>
