--- a/src/main/resources/templates/InhousePartForm.html
+++ b/src/main/resources/templates/InhousePartForm.html
@@ -23,8 +23,10 @@
 
     <p><input type="text" th:field="*{partId}" placeholder="Part ID" class="form-control mb-4 col-4"/></p>
 
-    <p><input type="text" <!--path="minimum"--> th:field="*{minimum}" placeholder="Minimum" class="form-control mb-4 col-4"/></p>
-    <p><input type="text" <!--path="maximum"--> th:field="*{maximum}" placeholder="Maximum" class="form-control mb-4 col-4"/></p>
+    <p><input type="text" th:field="*{min}" placeholder="Minimum" class="form-control mb-4 col-4"/></p>
+    <p th:if="${#fields.hasErrors('min')}" th:errors="*{min}">Min quantity Error</p>
+    <p><input type="text" th:field="*{max}" placeholder="Maximum" class="form-control mb-4 col-4"/></p>
+    <p th:if="${#fields.hasErrors('max')}" th:errors="*{max}">Min quantity Error</p>
 
 <p><input type="submit" value="Submit" /></p>
 </form>
