--- a/src/main/resources/templates/confirmationbuypart.html
+++ b/src/main/resources/templates/confirmationbuypart.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <titl>You bought the part</titl></title>
+    <!--    <meta charset="UTF-8">-->
+    <meta http-equiv="refresh"
+          content="0;URL='mainscreen'">
+    <title>Title</title>
 </head>
 <body>
-<h1>You bought the product!</h1>
 </body>
+<script>alert('You bought the part')</script>
 </html>
