--- a/src/main/resources/templates/failbuypart.html
+++ b/src/main/resources/templates/failbuypart.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Sold Out</title>
+    <!--    <meta charset="UTF-8">-->
+    <meta http-equiv="refresh"
+          content="0;URL='mainscreen'">
+    <title>Title</title>
 </head>
 <body>
-<h1>We're sold out of that product. You can't buy it right now.</h1>
 </body>
+<script>alert("We're out of inventory, you can't buy this.")</script>
 </html>
